adjusted all widths to 700px so it shows correctly on iPhone

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -351,22 +351,22 @@ input[type=submit] {
       padding-top: 0px;
     }
     .container {
-      max-width: 640px;
+      max-width: 700px;
     }
     
     #masthead {
       position: relative;
-      width: 640px;
+      width: 700px;
     }
 
    #logo {
-      width: 640px;
+      width: 700px;
     }
 
     nav {
 
       clear: both;
-      width: 640px;
+      width: 700px;
     }
 
     nav a {
@@ -374,7 +374,7 @@ input[type=submit] {
       display: inline-block;
     }
     .main-section {
-      max-width: 640px;
+      max-width: 700px;
     }
 
     .auth-image {
